<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- ================= LOGO / BACK / TABS ================= -->
    <ImageView
        android:id="@+id/backButton"
        android:layout_width="40dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:background="@drawable/channel_item_background"
        android:focusable="true"
        android:clickable="true"
        android:src="@drawable/ic_logo"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/h_guideline1"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/tabsLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toTopOf="@+id/h_guideline1"
        app:layout_constraintEnd_toStartOf="@+id/moduleTitle"
        app:layout_constraintStart_toEndOf="@+id/backButton"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/liveTvTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/live_tv"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:padding="8dp"
            android:focusable="true"
            android:background="@drawable/channel_item_background"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/moviesTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movies"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:padding="8dp"
            android:focusable="true"
            android:background="@drawable/channel_item_background"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/seriesTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/series"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:padding="8dp"
            android:focusable="true"
            android:background="@drawable/channel_item_background"/>
    </LinearLayout>

    <TextView
        android:id="@+id/moduleTitle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="end|center_vertical"
        android:text="@string/live_tv"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/h_guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- ================= CATEGORIES SECTION (35%) ================= -->
    <LinearLayout
        android:id="@+id/categories_list_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/v_guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/h_guideline1">

        <TextView
            android:id="@+id/categoryTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="Categories"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:background="#33FFFFFF"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/categoriesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
    </LinearLayout>

    <!-- ================= CHANNELS SECTION (15%) ================= -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/channelsRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#99000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/v_guideline2"
        app:layout_constraintStart_toEndOf="@+id/v_guideline1"
        app:layout_constraintTop_toBottomOf="@+id/h_guideline1"/>

    <!-- ================= PLAYER VIEW AREA (50%) ================= -->
    <ImageView
        android:id="@+id/previewImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:scaleType="centerCrop"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/channelNameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/channelsRecyclerView"
        app:layout_constraintTop_toBottomOf="@+id/h_guideline1"/>

    <LinearLayout
        android:id="@+id/channelNameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#CC000000"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/channelsRecyclerView"
        app:layout_constraintTop_toBottomOf="@+id/h_guideline2">

        <TextView
            android:id="@+id/previewTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="6dp"
            android:text="Channel Name"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/favoriteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="6dp"
            android:focusable="true"
            android:clickable="true"
            android:src="@drawable/ic_logo"/>
    </LinearLayout>

    <TextView
        android:id="@+id/epgInfoTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/channelsRecyclerView"
        app:layout_constraintTop_toBottomOf="@+id/channelNameLayout"/>

    <TextView
        android:id="@+id/previewInfo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textColor="@color/white"
        android:textSize="9sp"
        app:layout_constraintBottom_toTopOf="@+id/playButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/channelsRecyclerView"
        app:layout_constraintTop_toBottomOf="@+id/epgInfoTitle"/>

    <Button
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/play"
        android:background="@drawable/button_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/channelsRecyclerView"/>

    <ProgressBar
        android:id="@+id/loadingProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- ================= GUIDELINES ================= -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h_guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v_guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50"/>

</androidx.constraintlayout.widget.ConstraintLayout>
